--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "bluebird": "^3.5.0",
     "fogbugz.js": "0.0.33",
     "gitlab": "^1.7.1",
-    "node-gitlab-api": "^1.0.11"
+    "node-gitlab-api": "^1.0.12",
+    "request": "^2.81.0",
+    "tempy": "^0.1.0"
   }
 }
